# trois

./: .env.example  .gitignore  Procfile  README.md  deck.py  handler.py  package.json  pyproject.toml  requirements.txt  setup.py  trois.py  validator.py  webpack.config.js
client/: package.json  webpack.config.js
client/public/: bundle.js  index.html
client/public/css/: index.css
client/src/components/: cards.js  constants.js  history.js  lobby.js  message.js  options.js  player.js  room.js
public/: bundle.js  index.css  index.html  index.js
public/css/: index.css
public/js/: index.js  socket.js
public/js/components/: card.js  cards.js  controls.js  game.js  history.js  lobby.js  message.js  options.js  player.js  players.js  room.js
server/: pyproject.toml  tox.ini
server/src/: handler.py  room.py  trois.py  validator.py
server/tests/: test_deck.py  test_message.py  test_room.py  test_validator.py
src/: deck.py  handler.py  options.py  room.py  trois.py  user.py  validator.py
src/trois/: deck.py  handler.py  message.py  room.py  trois.py  validator.py
tests/: test_deck.py  test_validator.py
